@@ -1,4 +1,5 @@
 Development:
+  - add provider functions to fetch aggregate validator balances
   - add f_aggregation_indices to t_attestations to provide explicit indices for attestations
   - add t_eth1_deposits table to hold data about deposits on the Ethereum 1 chain (N.B. not currently populated)
   - add f_block_1_root and f_block_2_root to t_proposer_slashings table
